# autoservice

./: pyproject.toml
src/: api_v1.py  database.py  main.py
